--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
