--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "form-data": "^2.3.3"
+    "form-data": "^2.3.3",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.2.3"
   },
   "devDependencies": {
     "request": "^2.88.0",
