--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "form-data": "^2.3.3",
     "mysql2": "^1.6.5",
+    "node-cron": "^2.0.3",
     "sequelize": "^5.2.3"
   },
   "devDependencies": {
